--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     }
 
     .ai {
+      transition: all 0.3s ease;
       background: #e0e0e0;
       align-self: flex-start;
       text-align: left;
