--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       text-align: center;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
+    .chat-header:hover{
+	    transition: all 0.3s ease;
+	    cursor: pointer;
+	    color: #daf7df;
+    }
 
     .chat-box {
       flex: 1;
